--- a/obioma-online/src/app/landing/landing.component.html
+++ b/obioma-online/src/app/landing/landing.component.html
@@ -1,3 +1,82 @@
-<p>
-  landing works!
-</p>
+<app-header></app-header>
+<div class="body-container">
+
+  <div class="section">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6 white-bg">
+          <div class="text-container animated slideInUp">
+            <h3>Ripped Clothes?</h3>
+            <div class="underline-black"></div>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes</p>
+          </div>
+        </div>
+        <div class="col-md-6 photo-ripped animated fadeInUp">
+    
+        </div>
+      </div>
+    </div>
+    <div class="order-button text-center animated bou">
+        <a routerLink="booking"> PLACE AN ORDER</a>
+    </div>
+  </div>
+  <div class="section">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6 photo-loose animated fadeInDown">
+    
+        </div>
+        <div class="col-md-6 black-bg">
+          <div class="text-container animated slideInUp">
+            <h3>Loose Fits?</h3>
+            <div class="underline-white"></div>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="section testimonials">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 offset-md-1">
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <div>
+                    <p class="testimonial">Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus.</p>
+                    <div class="carousel-underline"></div>
+                    <p class="testimonial-meta">Luctus Pulvinar</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div>
+                    <p class="testimonial">Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus.</p>
+                    <div class="carousel-underline"></div>
+                    <p class="testimonial-meta">Luctus Pulvinar</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div>
+                    <p class="testimonial">Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus.</p>
+                    <div class="carousel-underline"></div>
+                    <p class="testimonial-meta">Luctus Pulvinar</p>                
+                  </div>
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<app-footer></app-footer>
