--- a/obioma-online/src/app/landing/booking-form/booking-form.component.html
+++ b/obioma-online/src/app/landing/booking-form/booking-form.component.html
@@ -1,3 +1,11 @@
-<p>
-  booking-form works!
-</p>
+<app-header></app-header>
+<div class="body-container animated slideInUp">
+  <div class="section">
+    <div class="container">
+      <div class="row">
+
+      </div>
+    </div>
+  </div>
+</div>
+<app-footer></app-footer>
