--- a/obioma-online/src/app/footer/footer.component.html
+++ b/obioma-online/src/app/footer/footer.component.html
@@ -2,7 +2,25 @@
   <div class="half-section">
     <div class="container">
       <div class="row">
+        <div class="col-md-4">
+          <img src="../../assets/img/obioma-logo-white.png">
+          <div class="underline-white"></div>
+          <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then</p>
 
+          <a href="#"><i class="fab fa-facebook-square fa-lg"></i></a>
+          <a href="#"><i class="fab fa-twitter-square fa-lg"></i></a>
+          <a href="#"><i class="fab fa-instagram fa-lg"></i></a>
+        </div>
+        <div class="col-md-4">
+
+        </div>
+        <div class="col-md-4">
+          <h6>STAY IN TOUCH</h6>
+          <P>Subscribe to stay up to date with our recent developments and discounts</P>
+          <input type="text" name="phone1" placeholder="Your name">
+          <input type="email" name="phone1" placeholder="Email Address">
+          <button class="submit-form" type="submit">Subscribe</button>
+        </div>
       </div>
     </div>
   </div>
