--- a/obioma-online/src/app/header/header.component.html
+++ b/obioma-online/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="animated bounceInDown">
+<header class="animated fadeInDown">
   <div class="container">
     <div class="row">
       <div class="col-md-3">
@@ -15,7 +15,7 @@
             <a class="nav-link" href="#">TERMS & CONDITIONS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">CONTACT US</a>
+            <a class="nav-link" routerLink="../contact" routerLinkActive="active">CONTACT US</a>
           </li>
           <li class="nav-item">
             <a class="nav-link order" routerLink="booking">PLACE AN ORDER</a>
