--- a/obioma-online/src/app/landing/booking-form/repair-form/repair-form.component.html
+++ b/obioma-online/src/app/landing/booking-form/repair-form/repair-form.component.html
@@ -1,3 +1,43 @@
-<p>
-  repair-form works!
-</p>
+<div class="row animated fadeIn">
+  <div class="col-md-6">
+    <P>NAME</P>
+    <input type="text" name="name" placeholder="Full name">
+  </div>
+  <div class="col-md-6">
+    <P>EMAIL</P>
+    <input type="email" name="email" placeholder="Email address">
+  </div>
+  <div class="col-md-6">
+    <P>PHONE NUMBER</P>
+    <input type="text" name="phone1" placeholder="Phone number">
+  </div>
+  <div class="col-md-6">
+    <P>PHONE NUMBER</P>
+    <input type="text" name="phone2" placeholder="Other phone (if available)">
+  </div>
+  <div class="col-md-9">
+    <p>PICKUP/DELIVERY ADDRESS</p>
+    <input type="text" name="address" placeholder="Your Address">
+  </div>
+  <div class="col-md-3">
+    <p>NO. OF ITEMS</p>
+    <input type="text" name="address" placeholder="How many items">
+  </div>
+  <div class="col-md-6">
+    <p>LANDMARK</p>
+    <input type="text" name="landmark" placeholder="Any landmark we can use to easily find you">
+  </div>
+  <div class="col-md-6">
+    <P>LOCATION</P>
+    <input type="text" name="landmark" placeholder="City/Location">
+  </div>
+  <div class="col-md-6">
+    <P>MORE INFORMATION ABOUT YOUR ORDER</P>
+    <textarea placeholder="Please tell us more about your order and what you will like to do"></textarea>
+  </div>
+  <div class="col-md-6"></div>
+
+  <div class="col-md-6">
+    <button class="submit-form" type="submit">Place Order</button>
+  </div>
+</div>
