--- a/obioma-online/src/app/landing/landing.component.html
+++ b/obioma-online/src/app/landing/landing.component.html
@@ -1,18 +1,20 @@
 <app-header></app-header>
 <div class="body-container">
-
   <div class="section">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-6 white-bg">
-          <div class="text-container animated slideInUp">
-            <h3>Ripped Clothes?</h3>
-            <div class="underline-black"></div>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes</p>
+        <div class="col-md-12 photo-ripped animated fadeIn">
+          <div class="overlay">
+            <div class="col-md-8 offset-md-2 text-center transparent-bg">
+              <div class="text-container animated slideInUp">
+                <!-- <h3>Ripped Clothes?</h3> -->
+                <div class="underline-black"></div>
+                <p class="hero-text"> Its no news the Big city has got us living life fast . let's help you match up speed at ease. Clothes don't fit proper ? Ooops !! Need to be stitched?
+                  Obiomaonline.com.ng Your virtual  tailor , the best there is will take the load off. Lets solve that little problem for you and because its little We will do it for a fee as such.
+                  </p>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="col-md-6 photo-ripped animated fadeInUp">
-    
         </div>
       </div>
     </div>
@@ -20,7 +22,7 @@
         <a routerLink="booking"> PLACE AN ORDER</a>
     </div>
   </div>
-  <div class="section">
+  <!-- <div class="section">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-6 photo-loose animated fadeInDown">
@@ -34,8 +36,8 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
+    </div> -->
+  <!-- </div> -->
 
   <div class="section testimonials">
     <div class="container">
