--- a/obioma-online/src/app/footer/footer.component.css
+++ b/obioma-online/src/app/footer/footer.component.css
@@ -3,3 +3,32 @@ footer{
     width:100%;
     background-color:#000;
 }
+
+p, h6{
+    color:#ffffff96;
+    font-size:0.8em;
+    margin-bottom:30px;
+}
+
+h6{
+    font-family:'Montserrat', sans-serif
+}
+
+a i{
+    color:#ffffff96;
+    margin-right:10px;
+    text-decoration: none;
+}
+
+a i:hover{
+    color:#ffffffd4;
+}
+
+img{
+    width:20%;
+    filter:opacity(70%);
+}
+
+input[type=text], input[type=email]{
+    background-color:#202020 !important;
+}
