--- a/obioma-online/src/styles.css
+++ b/obioma-online/src/styles.css
@@ -17,6 +17,12 @@ a{
   display:flex;
 }
 
+.section-noflex{
+  padding-top:100px;
+  min-height:100vh;
+  height:inherit;
+}
+
 .half-section{
   min-height:50vh;
   height:inherit;
@@ -44,7 +50,7 @@ h3{
   font-family: 'Slabo 27px', serif;
 }
 
-p{
+p, a{
   font-family: 'Montserrat', sans-serif;
   font-size:0.8em;
 }
@@ -65,6 +71,14 @@ p{
   padding-left:175px;
 }
 
+.transparent-bg{
+  background-color: transparent;
+  height:100vh;
+  display: flex;
+  align-items: center;
+  /* padding-left:175px; */
+}
+
 .black-bg h3, .black-bg p{
   color: #ffffffce;
   width:70%;
@@ -74,6 +88,69 @@ p{
   color: #000;
   width:70%;
 }
+
+nopadding{
+  padding:0!important;
+  margin:0!important;
+}
+
+input[type=text], input[type=email], input[type=number], textarea, select{
+  outline:none;
+  border:none;
+  padding:0.8em;
+  font-size:0.8em;
+  background-color: #f1f1f1;
+  border-radius: 3px;
+  margin-bottom:10px;
+  transition: all 200ms ease;
+  color:#666;
+  width:100%;
+  border-bottom: 1px solid transparent;
+}
+
+select {
+  -webkit-appearance: none; 
+  -moz-appearance: none;
+  appearance: none;       /* remove default arrow */
+}
+
+input[type=text]:hover, input[type=email]:hover, input[type=number]:hover, textarea:hover, select:hover{
+  background-color: #efeeee;
+}
+
+textarea{
+  height:150px;
+}
+
+input[type=text]:focus, input[type=email]:focus, input[type=number]:focus textarea:focus{
+  background-color:#fff;
+  border-bottom: 1px solid #666;
+  border-radius:0;
+}
+
+button.submit-form, button.add{
+  outline:none;
+  border:none;
+  padding:0.8em;
+  font-size:0.8em;
+  background-color: #666;
+  border-radius: 3px;
+  margin-bottom:10px;
+  transition: all 200ms ease;
+  color:#ffffffbd;
+  width:40%;
+  text-align: center;
+  cursor:pointer;
+}
+
+button.add{
+  width:100%!important;
+}
+
+button.submit-form:hover, button.add:hover{
+  background-color:#000;
+}
+
 
  /* ********************TOASTR********************* */
 /* based on angular-toastr css https://github.com/Foxandxss/angular-toastr/blob/cb508fe6801d6b288d3afc525bb40fee1b101650/dist/angular-toastr.css */
